[project]
name = "agentscan"
version = "0.1.0"
description = "AI Agent Security Posture Scanner — enumerate all AI coding agents and map their aggregate permission surface"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Kris Kimmerle"}]
keywords = ["security", "ai-agents", "mcp", "permissions", "audit", "scanner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
agentscan = "agentscan:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/kriskimmerle/agentscan"
Repository = "https://github.com/kriskimmerle/agentscan"
Issues = "https://github.com/kriskimmerle/agentscan/issues"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
